# LLM-Cost-Governance-Attribution-Platform

./: .env.example  .gitignore  CHALLENGES.md  EXPLAIN_IT_SIMPLY.md  pyproject.toml  readme.md  requirements.txt
config/: budgets.yaml  pricing.yaml  routing.yaml
dashboard/: app.py
docs/: WALKTHROUGH.md
docs/adr/: 001-fastapi-gateway-pattern.md  002-gateway-level-logging.md  003-external-pricing-config.md  004-langfuse-over-custom-tracing.md  005-rule-based-routing-first.md  006-streamlit-mvp-dashboard.md  007-policy-as-config.md  template.md
scripts/: demo_phase1.py  seed_data.py
src/llm_gateway/: __init__.py  budgets.py  config.py  cost.py  db.py  gateway.py  governance.py  main.py  models.py  observability.py  pricing.py  reporting.py  router.py  schemas.py
src/llm_gateway/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  mock_provider.py  openai_provider.py
tests/: test_gateway.py  test_governance.py  test_observability.py  test_pricing.py  test_reporting.py  test_router.py
