[project]
name = "llm-cost-governance"
version = "0.1.0"
description = "FinOps for LLMs — a cost governance, attribution, and routing gateway."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
